# contra_in_browser_api

./: .gitignore  .pre-commit-config.yaml  .precommit-config.yaml  Dockerfile  Makefile  docker-compose.yml  entrypoint.sh  pyproject.toml  requirements.txt  socketio_server.py
config/: asgi.py  settings.py  urls.py  wsgi.py
nginx/: nginx.conf
src/api/: api.py  dependencies.py  schemas.py
src/api/utils/: jwt_auth_requied_decorator.py
src/users_app/: apps.py  managers.py  models.py  schemas.py  urls.py  views.py
src/users_app/management/commands/: create_simple_user_with_email.py  create_superuser_with_email.py  users_initial_script.py
src/users_app/migrations/: 0001_initial.py
src/users_app/services/: users_service.py
